<resources>
    <string name="app_name">IceBox</string>
    <string name="subject_name">"Subject Name</string>
    <string name="select">Select</string>
    <string name="start_time">"Start Time"</string>
    <string name="end_time">End Time</string>
    <string name="start_date">Start Date</string>
    <string name="sample_time">HH:MM</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="save">Save</string>

</resources>